# opendrivefm

./: .gitignore  .hfignore  OpenDriveFM_Gradio_Guide.docx  README.md  index.html  live_demo_webcam.py  opendrivefm_paper.aux  opendrivefm_paper.tex  opendrivefm_refs.bib  portfolio.html  requirements.txt  run_real_demo.py
apps/demo/: live_demo_webcam.py
lightning_logs/version_32/: events.out.tfevents.1772943582.Mac.fios-router.home.24319.0
lightning_logs/version_33/: events.out.tfevents.1772944264.Mac.fios-router.home.24447.0  hparams.yaml
lightning_logs/version_34/: events.out.tfevents.1772945245.Mac.fios-router.home.24626.0
lightning_logs/version_35/: events.out.tfevents.1772958251.Mac.fios-router.home.26124.0
lightning_logs/version_36/: events.out.tfevents.1772960273.Mac.fios-router.home.26540.0
lightning_logs/version_37/: events.out.tfevents.1772962445.Mac.fios-router.home.26861.0
lightning_logs/version_38/: events.out.tfevents.1773002056.Mac.fios-router.home.29809.0  hparams.yaml
lightning_logs/version_39/: events.out.tfevents.1773004212.Mac.fios-router.home.30084.0
lightning_logs/version_40/: events.out.tfevents.1773004586.Mac.fios-router.home.30177.0
lightning_logs/version_41/: events.out.tfevents.1773006796.Mac.fios-router.home.30565.0
lightning_logs/version_63/: hparams.yaml  (+1 more)
scripts/: CMakeLists.txt  bench_latency.cpp  build_nuscenes_labels_3class.py  eval_generalization.py  export_torchscript.py  gradio_app.py  gradio_demo.py  prepare_nuscenes_mini.py  regen_labels_objects.py
scripts/data/: regen_labels_128.py
wandb/: latest-run
(+34 files in other folders)
